# remote-store

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_STORY.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
docs/: development-story.md  getting-started.md  index.md
docs/api/: backend.md  capabilities.md  config.md  errors.md  index.md  models.md  path.md  registry.md  store.md
docs/backends/: index.md  local.md  s3-pyarrow.md  s3.md  sftp.md
docs/design/: design-spec.md  index.md  process.md
docs/design/adrs/: 0001-architecture-store-registry-backends.md  0002-config-resolution-no-merge.md  0003-fsspec-is-implementation-detail.md  0004-empty-path-semantics.md  index.md
docs/design/specs/: 001-store-api.md  002-registry-config.md  003-backend-adapter-contract.md  004-path-model.md  005-error-model.md  006-streaming-io.md  007-atomic-writes.md  008-s3-backend.md  009-sftp-backend.md  index.md
docs/examples/: atomic-writes.md  configuration.md  error-handling.md  file-operations.md  index.md  quickstart.md  streaming-io.md
docs/specs/: backend.md  capabilities.md  config.md  errors.md  models.md  path.md  registry.md  store.md
examples/: atomic_writes.py  configuration.py  error_handling.py  file_operations.py  quickstart.py  streaming_io.py
examples/notebooks/: 01_getting_started.ipynb  02_file_operations.ipynb  03_configuration.ipynb
guides/backends/: index.md  local.md  s3-pyarrow.md  s3.md  sftp.md
scripts/: generate_docs.py
sdd/: 000-process.md  BACKLOG.md  DESIGN.md
sdd/adrs/: 0001-architecture-store-registry-backends.md  0002-config-resolution-no-merge.md  0003-fsspec-is-implementation-detail.md  0004-empty-path-semantics.md  0005-native-path-resolution.md  0006-documentation-architecture.md
sdd/rfcs/: rfc-0001-azure-backend.md  rfc-0002-azure-backend.md  rfc-0002-pyarrow-filesystem-adapter.md  rfc-template.md
sdd/specs/: 001-store-api.md  002-registry-config.md  003-backend-adapter-contract.md  004-path-model.md  005-error-model.md  006-streaming-io.md  007-atomic-writes.md  008-s3-backend.md  009-sftp-backend.md  010-native-path-resolution.md  011-s3-pyarrow-backend.md  012-azure-backend.md
src/remote_store/: __init__.py  _backend.py  _capabilities.py  _config.py  _errors.py  _models.py  _path.py  _registry.py  _store.py  _types.py
src/remote_store/backends/: __init__.py  _local.py  _s3.py  _s3_pyarrow.py  _sftp.py
src/remote_store/ext/: __init__.py
tests/: conftest.py  test_capabilities.py  test_config.py  test_coverage_gaps.py  test_errors.py  test_models.py  test_path.py  test_registry.py  test_store.py
tests/backends/: conftest.py  sftp_server.py  test_conformance.py  test_local.py  test_s3.py  test_s3_pyarrow.py  test_sftp.py
