[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-store"
version = "0.1.0"
description = "Backend-agnostic remote storage abstraction for Python — one API for local files, S3, Azure Blob, SFTP, and more."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Harald Alferi" },
]
keywords = [
  "storage",
  "remote",
  "s3",
  "azure",
  "sftp",
  "backend",
  "abstraction",
  "file",
  "streaming",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Filesystems",
  "Typing :: Typed",
]

dependencies = [
  "typing-extensions",
]

[project.urls]
Repository = "https://github.com/haalfi/remote-store"
Changelog = "https://github.com/haalfi/remote-store/blob/master/CHANGELOG.md"
Issues = "https://github.com/haalfi/remote-store/issues"

[project.optional-dependencies]
s3 = ["boto3", "pyarrow"]
azure = ["adlfs"]
sftp = ["paramiko", "sshfs"]

dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "jupyter",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src/ tests/ examples/"
format = "ruff format src/ tests/ examples/"
format-check = "ruff format --check src/ tests/ examples/"
typecheck = "mypy src/"
test = "pytest"
test-cov = "pytest --cov=remote_store --cov-report=term-missing --cov-fail-under=95"
examples = [
  "python examples/quickstart.py",
  "python examples/file_operations.py",
  "python examples/streaming_io.py",
  "python examples/atomic_writes.py",
  "python examples/configuration.py",
  "python examples/error_handling.py",
]
all = ["lint", "format-check", "typecheck", "test-cov", "examples"]

[tool.hatch.build.targets.wheel]
packages = ["src/remote_store"]

[tool.mypy]
strict = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "spec(id): links test to a spec section ID",
  "integration: requires external services",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["UP045"]

[tool.ruff.lint.isort]
known-first-party = ["remote_store"]
