[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-store"
version = "0.4.0"
description = "One simple API for file storage. Local, S3, SFTP, Azure. Same methods, swappable backends, zero reinvention."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Harald Alferi" },
]
keywords = [
  "file-storage",
  "object-storage",
  "filesystem",
  "storage-abstraction",
  "api",
  "streaming",
  "atomic-writes",
  "s3",
  "azure-blob-storage",
  "sftp",
  "fsspec",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Filesystems",
  "Typing :: Typed",
  "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Documentation = "https://remote-store.readthedocs.io/"
Repository = "https://github.com/haalfi/remote-store"
Changelog = "https://github.com/haalfi/remote-store/blob/master/CHANGELOG.md"
Issues = "https://github.com/haalfi/remote-store/issues"

[project.optional-dependencies]
s3 = ["s3fs>=2024.2.0"]
s3-pyarrow = ["s3fs>=2024.2.0", "pyarrow>=14.0.0"]
sftp = ["paramiko>=2.2", "tenacity>=4.0"]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-include-markdown-plugin>=7.0",
  "s3fs>=2024.2.0",
]

dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "jupyter",
  "s3fs>=2024.2.0",
  "pyarrow>=14.0.0",
  "moto[server,s3]",
  "paramiko>=2.2",
  "tenacity>=4.0",
  "types-paramiko",
  "pre-commit",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "s3fs>=2024.2.0",
  "moto[server,s3]",
  "paramiko>=2.2",
  "tenacity>=4.0",
  "pyarrow>=14.0.0",
  "types-paramiko",
  "pre-commit",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-include-markdown-plugin>=7.0",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src/ tests/ examples/"
format = "ruff format src/ tests/ examples/"
format-check = "ruff format --check src/ tests/ examples/"
typecheck = "mypy src/"
test = "pytest"
test-cov = "pytest --cov=remote_store --cov-report=term-missing --cov-fail-under=95"
examples = [
  "python examples/quickstart.py",
  "python examples/file_operations.py",
  "python examples/streaming_io.py",
  "python examples/atomic_writes.py",
  "python examples/configuration.py",
  "python examples/error_handling.py",
]
docs = "mkdocs serve"
docs-build = "mkdocs build --strict"
pre-commit-install = "pre-commit install"
all = ["lint", "format-check", "typecheck", "test-cov", "examples"]

[tool.hatch.build.targets.wheel]
packages = ["src/remote_store"]

[tool.mypy]
strict = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "spec(id): links test to a spec section ID",
  "integration: requires external services",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["UP045"]

[tool.ruff.lint.isort]
known-first-party = ["remote_store"]
